# om-legion

./: .gitignore  LICENSE  README.md  cabal.project  cabal.project.freeze  om-legion.cabal  stack.yaml
.github/workflows/: haskell.yml
src/OM/: Legion.hs
src/OM/Legion/: Conduit.hs  Connection.hs  Fork.hs  Lift.hs  Management.hs  MsgChan.hs  PowerState.hs  RChan.hs  Runtime.hs  Settings.hs  TestSupport.hs  UUID.hs
src/OM/Legion/PowerState/: Monad.hs
test/: Dockerfile-node  Dockerfile-run  Dockerfile-scale-down  Dockerfile-stable  Dockerfile.profile  build-docker.sh  om-legion-test-driver.hs  om-legion-test-inc.hs  om-legion-test-node.hs  om-legion-test-profile.hs  om-legion-test-run.hs  om-legion-test-scale-down.hs  om-legion-test-stable.hs
test/Test/OM/: Legion.hs
test/k8s/: k8s.mustache
