cabal-version:       3.0
name:                om-legion
version:             6.7.0.2
synopsis:            Core Legion Framework.
-- description:         
homepage:            https://github.com/owensmurray/om-legion
license:             NONE
license-file:        LICENSE
author:              Rick Owens
maintainer:          rick@owensmurray.com
copyright:           2022 Owens Murray, LLC.
category:            Network
build-type:          Simple
extra-source-files:
  README.md
  test/k8s/k8s.mustache

common dependencies
  build-depends:
    , aeson              >= 1.5.6.0   && < 1.6
    , async              >= 2.2.4     && < 2.3
    , base               >= 4.14      && < 4.15
    , binary             >= 0.8.8.0   && < 0.9
    , bytestring         >= 0.10.12.0 && < 0.11
    , clock              >= 0.8.2     && < 0.9
    , conduit            >= 1.3.4.2   && < 1.4
    , containers         >= 0.6.5.1   && < 0.7
    , crdt-event-fold    >= 1.7.0.0   && < 1.8
    , data-default-class >= 0.1.2.0   && < 0.2
    , http-api-data      >= 0.4.2     && < 0.5
    , monad-logger       >= 0.3.36    && < 0.4
    , mtl                >= 2.2.2     && < 2.3
    , network            >= 3.1.1.1   && < 3.2
    , om-fork            >= 0.7.1.1   && < 0.8
    , om-logging         >= 1.1.0.0   && < 1.2
    , om-show            >= 0.1.1.3   && < 0.2
    , om-socket          >= 0.9.0.1   && < 0.10
    , om-socket-server   >= 0.1.0.1   && < 0.2
    , random-shuffle     >= 0.0.4     && < 0.1
    , safe-exceptions    >= 0.1.7.2   && < 0.2
    , stm                >= 2.5.0.1   && < 2.6
    , text               >= 1.2.4.1   && < 1.3
    , time               >= 1.9.3     && < 1.10
    , transformers       >= 0.5.6.2   && < 0.6
    , unliftio-core      >= 0.2.0.1   && < 0.3
    , uuid               >= 1.3.15    && < 1.4

common warnings
  ghc-options:
    -Wall
    -Wmissing-deriving-strategies
    -Wmissing-export-lists
    -Wmissing-import-lists
    -Wredundant-constraints

library
  import: dependencies, warnings
  exposed-modules:     
    OM.Legion
  other-modules:       
    OM.Legion.Conduit
    OM.Legion.Connection
    OM.Legion.MsgChan
    OM.Legion.Runtime
  -- other-extensions:    
  hs-source-dirs: src
  default-language: Haskell2010

common test-dependencies
  build-depends:
    , om-legion
    , hostname         >= 1.0      && < 1.1
    , hspec            >= 2.7.10   && < 2.8
    , lens             >= 4.19.2   && < 4.20
    , lens-aeson       >= 1.1.3    && < 1.2
    , megaparsec       >= 9.0.1    && < 9.1
    , mustache         >= 2.3.2    && < 2.4
    , om-kubernetes    >= 2.3.0.0  && < 2.4
    , safe             >= 0.3.19   && < 0.4
    , template-haskell >= 2.16.0.0 && < 2.17
    , unix             >= 2.7.2.2  && < 2.8
    , unliftio         >= 0.2.20   && < 0.3
    , vector           >= 0.12.3.1 && < 0.13

executable om-legion-test-node
  import: warnings, dependencies, test-dependencies
  main-is: om-legion-test-node.hs
  hs-source-dirs: test
  other-modules:
    Test.OM.Legion
  default-language: Haskell2010

executable om-legion-test-driver
  import: warnings, dependencies, test-dependencies
  main-is: om-legion-test-driver.hs
  hs-source-dirs: test
  other-modules:
    Test.OM.Legion
  default-language: Haskell2010

executable om-legion-test-run
  import: warnings, dependencies, test-dependencies
  main-is: om-legion-test-run.hs
  hs-source-dirs: test
  other-modules:
    Test.OM.Legion
  default-language: Haskell2010

executable om-legion-test-stable
  import: warnings, dependencies, test-dependencies
  main-is: om-legion-test-stable.hs
  hs-source-dirs: test
  other-modules:
    Test.OM.Legion
  default-language: Haskell2010

executable om-legion-test-scale-down
  import: warnings, dependencies, test-dependencies
  main-is: om-legion-test-scale-down.hs
  hs-source-dirs: test
  other-modules:
    Test.OM.Legion
  default-language: Haskell2010
